<resources>
    <string name="app_name">Microwave</string>
    <string name="title_activity_pie">pieActivity</string>
    <string name="title_activity_pie_screen">pieScreen</string>
    <string name="desc">Image</string>
    <string name="button">Button</string>
    <string name="stop">STOP</string>
    <string name="textview">TextView</string>
    <string name="start">START</string>
    <string name="todo">TODO</string>
    <string name="meat">meat</string>
    <string name="pie">pie</string>
    <string name="text">text</string>
    <string name="popcorn">popcorn</string>
    <string name="soup">soup</string>
    <string name="what_type_of_food_you_want_to_heat_up">What type of food you want to heat up?</string>
    <string name="what_is_the_type_of_the_food_you_want_to_heat_up">What is the type of the food you want to heat up?</string>
    <string name="select_the_type_of_food_you_want_to_heat_up">Select the type of food you want to heat up.</string>
    <string name="_0_w">0 W</string>
    <string name="_0_Watt">_0_watt</string>
</resources>
